2024-11-29  Anna  <cyber@sysrq.in>

	* internal.py (fetch_bugs): support find-work's category filter.

	* internal.py (collect_bugs): change to a generator function.

2024-11-18  Anna  <cyber@sysrq.in>

	* 0.3.0 release

	* Update to new find-work namespacing

	* cli.py: support result reporters

2024-11-06  Anna  <cyber@sysrq.in>

	* 0.2.2 release

	* cli.py(bugzilla): add a little message mentioning there's a man page

	* internal.py(collect_bugs): catch invalid extracted atom strings

2024-08-22  Anna  <cyber@sysrq.in>

	* 0.2.1 release

	* cli.py: defer time-consuming imports (reduces startup time by ~0,4s)

2024-08-09  Anna  <cyber@sysrq.in>

	* 0.2.0 release

	* pyproject.toml: fix incorrect entry point name

2024-08-09  Anna  <cyber@sysrq.in>

	* 0.1.0 release